--- a/Upload_Version_of_Kaggle_Data_Pipeline_Doctor.ipynb
+++ b/Upload_Version_of_Kaggle_Data_Pipeline_Doctor.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1d93oT7xdkE3Wkkv2uEXa11lp0VduS14Q",
-      "authorship_tag": "ABX9TyNvs4/6pI6hxLrnNy2tuNPU",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNvs4/6pI6hxLrnNy2tuNPU"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,14 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      
-    },
     {
       "cell_type": "markdown",
       "source": [
